[gd_scene load_steps=9 format=2]

[ext_resource path="res://SPRITES/SIGNS/SIGN_POST_1.png" type="Texture" id=1]
[ext_resource path="res://Info_Textbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://SPRITES/SIGNS/SIGN_POST_3.png" type="Texture" id=3]
[ext_resource path="res://SPRITES/SIGNS/SIGN_POST_2.png" type="Texture" id=4]
[ext_resource path="res://Sign.gd" type="Script" id=5]
[ext_resource path="res://Info_Collider_Assets/zbox.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="Sign" type="StaticBody2D"]
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, -2.84217e-14 )
scale = Vector2( 0.026, 0.026 )
frames = SubResource( 1 )

[node name="Info_Textbox" parent="." instance=ExtResource( 2 )]

[node name="ZBoxSprite" type="Sprite" parent="."]
position = Vector2( 0, -47 )
texture = ExtResource( 6 )

[node name="ZBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZBox"]
shape = SubResource( 2 )

[connection signal="body_entered" from="ZBox" to="." method="_on_ZBox_body_entered"]
[connection signal="body_exited" from="ZBox" to="." method="_on_ZBox_body_exited"]
